# MyHarness

./: .copilotignore  .gitignore  .markdownlint.json  CLAUDE.md  INDEX.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: myharness.analyze.md  myharness.bd.md  myharness.checklist.md  myharness.clarify.md  myharness.compress.md  myharness.constitution.md  myharness.dd.md  myharness.implement.md  myharness.init.md  myharness.orchestrator.md  myharness.plan.md  myharness.review.code.md  myharness.review.plan.md  myharness.review.spec.md  myharness.specify.md  myharness.srs.md  myharness.srs.system.md  myharness.tasks.md  myharness.taskstoissues.md  myharness.testkit.md
.claude/commands/: caveman-commit.md  caveman-compress.md  caveman-review.md  caveman.md  myharness.analyze.md  myharness.checklist.md  myharness.clarify.md  myharness.constitution.md  myharness.implement.md  myharness.orchestrator-control.md  myharness.orchestrator.md  myharness.plan.md  myharness.review.code.md  myharness.review.spec.md  myharness.specify.md  myharness.srs.get-raw.md  myharness.srs.system.md  myharness.tasks.md  myharness.taskstoissues.md
.github/agents/: caveman-commit.agent.md  caveman-compress.agent.md  caveman-review.agent.md  caveman.agent.md  copilot-instructions.md  myharness.analyze.agent.md  myharness.bd.agent.md  myharness.checklist.agent.md  myharness.clarify.agent.md  myharness.compress.agent.md  myharness.constitution.agent.md  (+19 more)
.specify/: init-options.json  integration.json
docs/: technical_architecture.md
scripts/: backup_effectiveness.py
(+140 files in other folders)
