[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "myharness"
version = "0.1.0"
description = "MyHarness — AI-SDLC control plane and execution engine"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [".harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
