[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "myharness"
version = "0.1.0"
description = "MyHarness — AI-SDLC control plane and execution engine"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[tool.setuptools.packages.find]
# .harness is a dot-prefixed directory; setuptools cannot discover it automatically.
# The _DotHarnessFinder meta-path hook in runner.py handles runtime resolution.
# For editable installs, run from the repo root so sys.path includes ".harness/..".
where = ["."]
include = ["harness*"]

[tool.setuptools.package-dir]
# Map the public package name "harness" to the physical ".harness" directory.
"harness" = ".harness"

[tool.pytest.ini_options]
testpaths = ["tests"]
